Hamburger Menu z-index fix with banner

--- a/src/components/features/ctf-components/ctf-header/ctf-header.module.css
+++ b/src/components/features/ctf-components/ctf-header/ctf-header.module.css
@@ -148,7 +148,7 @@
   box-shadow: -2px 0 10px rgba(0, 0, 0, 0.15);
   padding: 20px;
   position: absolute;
-  z-index: 1;
+  z-index: 3;
   right:0;
 }
 
